--- a/STM8S_SPL/STM8S_SPL.config
+++ b/STM8S_SPL/STM8S_SPL.config
@@ -1,3 +1,4 @@
 // Add predefined macros for your project here. For example:
 // #define THE_ANSWER 42
 #define USE_STDPERIPH_DRIVER
+#define STM8S103
