--- a/STM8S_SPL/CMakeLists.txt
+++ b/STM8S_SPL/CMakeLists.txt
@@ -14,6 +14,8 @@ set(SOURCES
     print.c
     timer4.c
     spi.c
-    nrf24.c)
+    nrf24.c
+    pwm.c
+    ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/stm8s_tim2.c)
 
 add_executable(${PROJECT} ${SOURCES})
