--- a/STM8S_SPL/CMakeLists.txt
+++ b/STM8S_SPL/CMakeLists.txt
@@ -3,6 +3,7 @@ set(PROJECT STM8S_SPL_RX)
 project(${PROJECT} C)
 
 add_definitions(-D STM8S103)
+add_definitions(-D RECEIVER)
 
 include_directories( ${CMAKE_SOURCE_DIR}
                      ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/inc)
@@ -13,8 +14,8 @@ set(SOURCES
     serial.c
     print.c
     timer4.c
-#    spi.c
-#    nrf24.c
+    spi.c
+    nrf24.c
 #    pwm.c
 #    ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/stm8s_tim2.c
     )
@@ -31,13 +32,14 @@ add_executable(${PROJECT} ${SOURCES})
 
 #set(SOURCES
 #    tx.c
-#    adc.c
+##    adc.c
 #    serial.c
 #    print.c
 #    timer4.c
 #    spi.c
 #    nrf24.c
-#    pwm.c
-#    ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/stm8s_tim2.c)
+##    pwm.c
+##    ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/stm8s_tim2.c
+#    )
 
 #add_executable(${PROJECT} ${SOURCES})
