--- a/STM8S_SPL/CMakeLists.txt
+++ b/STM8S_SPL/CMakeLists.txt
@@ -3,7 +3,6 @@ set(PROJECT STM8S_SPL_RX)
 project(${PROJECT} C)
 
 add_definitions(-D STM8S103)
-add_definitions(-D RECEIVER)
 
 include_directories( ${CMAKE_SOURCE_DIR}
                      ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/inc)
@@ -21,25 +20,26 @@ set(SOURCES
     )
 
 add_executable(${PROJECT} ${SOURCES})
+target_compile_definitions(${PROJECT} PRIVATE RECEIVER)
 
-#set(PROJECT STM8S_SPL_TX)
-#project(${PROJECT} C)
+set(PROJECT_TX STM8S_SPL_TX)
+project(${PROJECT_TX} C)
 
-#add_definitions(-D STM8S103)
+add_definitions(-D STM8S103)
 
-#include_directories( ${CMAKE_SOURCE_DIR}
-#                     ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/inc)
+include_directories( ${CMAKE_SOURCE_DIR}
+                     ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/inc)
 
-#set(SOURCES
-#    tx.c
-##    adc.c
-#    serial.c
-#    print.c
-#    timer4.c
-#    spi.c
-#    nrf24.c
-##    pwm.c
-##    ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/stm8s_tim2.c
-#    )
+set(SOURCES_TX
+    tx.c
+#    adc.c
+    serial.c
+    print.c
+    timer4.c
+    spi.c
+    nrf24.c
+#    pwm.c
+#    ${CMAKE_SOURCE_DIR}/../STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/stm8s_tim2.c
+    )
 
-#add_executable(${PROJECT} ${SOURCES})
+add_executable(${PROJECT_TX} ${SOURCES_TX})
